fixed: image alignment on teams

--- a/Teams/css/responsive.css
+++ b/Teams/css/responsive.css
@@ -44,6 +44,10 @@
         font-size: 5.5em;
     }
 
+    .fac-mentor{
+        align-items: flex-end;
+    }
+
     .mentor{
         font-size: 5.5em;
         padding: 1.5em 0;
